src/objects/Estudio_de_titularidad__c.object
<CustomObject>
    <fields>
        <fullName>Forma_de_saneamiento__c</fullName>
        <label>Forma de saneamiento</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Limitaciones_al_dominio_o_grav_menes__c</fullName>
        <label>Limitaciones al dominio o gravámenes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Propietario_Registrado__c</fullName>
        <label>Propietario Registrado</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Proyecto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proyecto</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Proyecto__c.Estado_de_aprobacion_Riegos__c</field>
                <operation>equals</operation>
                <value>Aprobado</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Proyecto__c</referenceTo>
        <relationshipLabel>Estudios de titularidad</relationshipLabel>
        <relationshipName>Estudios_de_titularidad</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tradicion__c</fullName>
        <label>Tradición</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>